--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -9,8 +9,19 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
     <Grid>
-        <TextBlock Text="{Binding Model.Message}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center" />
+        <ListView ItemsSource="{Binding Model.Beatmaps}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <WrapPanel>
+                        <TextBlock Text="{Binding Title}"/>
+                        <TextBlock Text=" - " />
+                        <TextBlock Text="{Binding Artist}"/>
+                        <TextBlock Text=" [" />
+                        <TextBlock Text="{Binding Creator}"/>
+                        <TextBlock Text="]" />
+                    </WrapPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </UserControl>
