--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -4,12 +4,22 @@
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignHeight="400" d:DesignWidth="700"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
     <Grid>
-        <ListView ItemsSource="{Binding Model.Beatmaps}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <ListView Grid.Column="1" 
+                  ItemsSource="{Binding Model.Beatmaps}" SelectedItem="{Binding Model.CurrentBeatmap}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <WrapPanel>
@@ -23,5 +33,21 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+            <Slider Minimum="0" Maximum="{Binding Model.Length, Mode=OneWay}" Width="300" Value="{Binding Model.Position, Mode=TwoWay}"/>
+            <Button Content="Preious" 
+                    Command="{Binding PreviousBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            <Button Content="Stop" 
+                    Command="{Binding StopBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            <Button Content="Pause" 
+                    Command="{Binding PauseBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            <Button Content="Play" 
+                    Command="{Binding PlayBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            <Button Content="Next" 
+                    Command="{Binding NextBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            <Slider Minimum="0" Maximum="1" Width="100" Value="{Binding Playback.Volume, Mode=TwoWay}"/>
+            <ToggleButton Content="Random" IsChecked="{Binding Model.Random}"/>
+            <ToggleButton Content="Repeat" IsChecked="{Binding Model.Repeat}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
