--- a/src/Osu.Music/Views/MainWindow.xaml
+++ b/src/Osu.Music/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="500" Width="800" >
+        Title="{Binding Title}" Height="550" Width="900" MinHeight="550" MinWidth="900">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
     </Grid>
