--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -8,7 +8,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="700"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
              prism:ViewModelLocator.AutoWireViewModel="True" >
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Osu.Music.UI;component/Resources/Dictionaries/FontIcons.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Osu.Music.UI;component/Resources/Dictionaries/Buttons.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Osu.Music.UI;component/Resources/Dictionaries/VolumeSlider.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -33,21 +43,29 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
-            <Slider Minimum="0" Maximum="{Binding Model.Length, Mode=OneWay}" Width="300" Value="{Binding Model.Position, Mode=TwoWay}"/>
-            <Button Content="Preious" 
-                    Command="{Binding PreviousBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
-            <Button Content="Stop" 
-                    Command="{Binding StopBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
-            <Button Content="Pause" 
-                    Command="{Binding PauseBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
-            <Button Content="Play" 
-                    Command="{Binding PlayBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
-            <Button Content="Next" 
-                    Command="{Binding NextBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
-            <Slider Minimum="0" Maximum="1" Width="100" Value="{Binding Playback.Volume, Mode=TwoWay}"/>
-            <ToggleButton Content="Random" IsChecked="{Binding Model.Random}"/>
-            <ToggleButton Content="Repeat" IsChecked="{Binding Model.Repeat}"/>
-        </StackPanel>
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" Background="Purple">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" VerticalAlignment="Center" Orientation="Horizontal" Margin="10 0 0 0">
+                <ToggleButton Style="{DynamicResource PlayerToggleButtonVolume}" Command="{Binding MuteCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=Self}, Path=IsChecked}"/>
+                <Slider Style="{DynamicResource VolumeSlider}" Minimum="0" Maximum="1" Value="{Binding Playback.Volume}"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center">
+                <!--<Slider Minimum="0" Maximum="{Binding Model.Length, Mode=OneWay}" Width="300" Value="{Binding Model.Position, Mode=TwoWay}"/>-->
+                <Button Style="{DynamicResource PlayerButtonPrevious}" Command="{Binding PreviousBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+                <Button Style="{DynamicResource PlayerButtonStop}" Command="{Binding StopBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+                <Button Style="{DynamicResource PlayerButtonPlay}" Command="{Binding PlayBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+                <Button Style="{DynamicResource PlayerButtonPause}" Command="{Binding PauseBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+                <Button Style="{DynamicResource PlayerButtonNext}" Command="{Binding NextBeatmapCommand}" CommandParameter="{Binding Model.CurrentBeatmap}"/>
+            </StackPanel>
+            <StackPanel Grid.Column="2" VerticalAlignment="Center" Orientation="Horizontal" Margin="0 0 10 0">
+                <ToggleButton Style="{DynamicResource PlayerToggleButtonShuffle}" IsChecked="{Binding Model.Random}"/>
+                <ToggleButton Style="{DynamicResource PlayerToggleButtonRandom}" IsChecked="{Binding Model.Repeat}"/>
+            </StackPanel>
+        </Grid>
+        
     </Grid>
 </UserControl>
