--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -31,9 +31,13 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <StackPanel Background="#EEEEEE">
-            
-        </StackPanel>
+        <Grid Background="#EEEEEE">
+            <Image Source="pack://application:,,,/Osu.Music.UI;component/Resources/Images/SidebarBackground.jpg" Stretch="UniformToFill"
+                   Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}" HorizontalAlignment="Center"/>
+            <Rectangle Fill="Purple" Opacity="0.1"
+                Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}"
+                Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}"/>
+        </Grid>
         <ListView Style="{DynamicResource ListViewBeatmaps}" Grid.Column="1" ItemsSource="{Binding Model.Beatmaps}" SelectedItem="{Binding Model.SelectedBeatmap}">
         </ListView>
         <controls:BeatmapProgressBar Grid.Row="1" Grid.ColumnSpan="2" Total="{Binding Model.TotalTime}" Current="{Binding Model.CurrentTime}" Progress="{Binding Model.Progress}" />
