--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -31,12 +31,20 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <Grid Background="#EEEEEE">
-            <Image Source="pack://application:,,,/Osu.Music.UI;component/Resources/Images/SidebarBackground.jpg" Stretch="UniformToFill"
-                   Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}" HorizontalAlignment="Center"/>
-            <Rectangle Fill="Purple" Opacity="0.1"
-                Width="{Binding Path=ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}"
-                Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType=Grid}}"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="250"/>
+            </Grid.RowDefinitions>
+            <Image Source="pack://application:,,,/Osu.Music.UI;component/Resources/Images/sidebar-background.png" 
+                   Grid.RowSpan="2"  Stretch="UniformToFill" HorizontalAlignment="Center"/>
+            <Rectangle Fill="Purple" Opacity="0.2" Grid.RowSpan="2"/>
+
+            <StackPanel Orientation="Vertical" Margin="0 15 0 0">
+                <Button Style="{DynamicResource SidebarButtonCollection}"/>
+            </StackPanel>
+
+            <Image Grid.Row="1" Source="pack://application:,,,/Osu.Music.UI;component/Resources/Images/osu-logo.png" Width="150" Height="150"/>
         </Grid>
         <ListView Style="{DynamicResource ListViewBeatmaps}" Grid.Column="1" ItemsSource="{Binding Model.Beatmaps}" SelectedItem="{Binding Model.SelectedBeatmap}">
         </ListView>
